--- a/compose.yaml
+++ b/compose.yaml
@@ -9,10 +9,11 @@ services:
     # set shared memory limit when using docker compose
     shm_size: 128mb
     environment:
-      POSTGRES_PASSWORD: pass
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - wizard-data:/var/lib/postgresql
 
-  adminer: # a database management tool
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
+volumes:
+  wizard-data:
